--- a/.gitmodules
+++ b/.gitmodules
@@ -39,6 +39,8 @@
 [submodule "zoo/graphitemaster.incbin"]
 	path = zoo/graphitemaster.incbin
 	url = https://github.com/graphitemaster/incbin.git
+	branch = master
 [submodule "zoo/aws.amazon-freertos"]
 	path = zoo/aws.amazon-freertos
 	url = git@github.com:aws/amazon-freertos.git
+	branch = master
