--- a/.gitmodules
+++ b/.gitmodules
@@ -34,7 +34,7 @@
 	branch = master
 [submodule "zoo/lammertb.libcrc"]
 	path = zoo/lammertb.libcrc
-	url = git@github.com:lammertb/libcrc.git
+	url = https://github.com/lammertb/libcrc.git
 	branch = master
 [submodule "zoo/graphitemaster.incbin"]
 	path = zoo/graphitemaster.incbin
@@ -42,5 +42,5 @@
 	branch = master
 [submodule "zoo/aws.amazon-freertos"]
 	path = zoo/aws.amazon-freertos
-	url = git@github.com:aws/amazon-freertos.git
+	url = https://github.com/aws/amazon-freertos.git
 	branch = master
