--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "zoo/thinnect.dev-platforms"]
 	path = zoo/thinnect.dev-platforms
 	url = https://github.com/thinnect/dev-platforms.git
-	branch = new_tsbs
+	branch = ftos
 [submodule "zoo/thinnect.node-buildsystem"]
 	path = zoo/thinnect.node-buildsystem
 	url = https://github.com/thinnect/node-buildsystem.git
@@ -9,7 +9,7 @@
 [submodule "zoo/thinnect.node-platform"]
 	path = zoo/thinnect.node-platform
 	url = https://github.com/thinnect/node-platform.git
-	branch = master
+	branch = lptsleep
 [submodule "zoo/thinnect.lll"]
 	path = zoo/thinnect.lll
 	url = https://github.com/thinnect/lll.git
