Update submodules to master.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "zoo/thinnect.dev-platforms"]
 	path = zoo/thinnect.dev-platforms
 	url = https://github.com/thinnect/dev-platforms.git
-	branch = ftos
+	branch = master
 [submodule "zoo/thinnect.node-buildsystem"]
 	path = zoo/thinnect.node-buildsystem
 	url = https://github.com/thinnect/node-buildsystem.git
-	branch = m33
+	branch = master
 [submodule "zoo/thinnect.node-platform"]
 	path = zoo/thinnect.node-platform
 	url = https://github.com/thinnect/node-platform.git
-	branch = conditional_sleep_behaviour
+	branch = master
 [submodule "zoo/thinnect.lll"]
 	path = zoo/thinnect.lll
 	url = https://github.com/thinnect/lll.git
@@ -30,7 +30,7 @@
 [submodule "zoo/thinnect.cmsis-freertos"]
 	path = zoo/thinnect.cmsis-freertos
 	url = https://github.com/thinnect/cmsis-freertos
-	branch = m33-update
+	branch = master
 
 [submodule "zoo/jtbr.endianness"]
 	path = zoo/jtbr.endianness
