--- a/apps/hello-silabs/Makefile
+++ b/apps/hello-silabs/Makefile
@@ -1,20 +1,13 @@
-# This is the main makefile for RadioCountToLeds firmware
+# This is the main makefile for blink firmware
 
 # _______________________ User overridable configuration _______________________
 
-PROJECT_NAME            ?= radiocounttoleds
+PROJECT_NAME            ?= hello
 
 VERSION_MAJOR           ?= 1
 VERSION_MINOR           ?= 0
 VERSION_PATCH           ?= 0
 VERSION_DEVEL           ?= "-dev"
-
-DEFAULT_RADIO_CHANNEL   ?= 13
-
-# Set device address at compile time for cases where a signature is not present
-DEFAULT_AM_ADDR         ?= 1
-# Set destination address at compile time
-DESTINATION_GATEWAY_ADDRESS ?= 0xFFFF
 
 # No bootloader, app starts at 0
 APP_START               = 0
@@ -22,7 +15,6 @@ APP_START               = 0
 # Common build options - some of these should be moved to targets/boards
 CFLAGS                  += -Wall -std=c99
 CFLAGS                  += -ffunction-sections -fdata-sections -ffreestanding -fsingle-precision-constant -Wstrict-aliasing=0
-CFLAGS                  += -DconfigUSE_TICKLESS_IDLE=0
 CFLAGS                  += -D__START=main -D__STARTUP_CLEAR_BSS
 CFLAGS                  += -DVTOR_START_LOCATION=$(APP_START)
 LDFLAGS                 += -nostartfiles -Wl,--gc-sections -Wl,--relax -Wl,-Map=$(@:.elf=.map),--cref -Wl,--wrap=atexit
@@ -31,9 +23,6 @@ INCLUDES                += -Xassembler -I$(BUILD_DIR) -I.
 
 # If set, disables asserts and debugging, enables optimization
 RELEASE_BUILD           ?= 0
-
-# Set the lll verbosity base level
-CFLAGS                  += -DBASE_LOG_LEVEL=0xFFFF
 
 # Enable debug messages
 VERBOSE                 ?= 0
@@ -68,59 +57,27 @@ BUILDSYSTEM_DIR         := $(ZOO)/thinnect.node-buildsystem/make
 PLATFORMS_DIRS          := $(ZOO)/thinnect.node-buildsystem/make $(ZOO)/thinnect.dev-platforms/make
 PHONY_GOALS             := all clean
 TARGETLESS_GOALS        += clean
-UUID_APPLICATION        := d709e1c5-496a-4d31-8957-f389d7fdbb71
+UUID_APPLICATION        := e3dcc655-7ae9-43ce-89d1-d3aeb6bef7a8
 
 VERSION_BIN             := $(shell printf "%02X" $(VERSION_MAJOR))$(shell printf "%02X" $(VERSION_MINOR))$(shell printf "%02X" $(VERSION_PATCH))
 VERSION_STR             := "$(VERSION_MAJOR).$(VERSION_MINOR).$(VERSION_PATCH)"$(VERSION_DEVEL)
-SW_MAJOR_VERSION        := $(VERSION_MAJOR)
-SW_MINOR_VERSION        := $(VERSION_MINOR)
-SW_PATCH_VERSION        := $(VERSION_PATCH)
 BUILD_TIMESTAMP         := $(shell date '+%s')
-IDENT_TIMESTAMP         := $(BUILD_TIMESTAMP)
 
 # NODE_PLATFORM_DIR is used by targets to add components to INCLUDES and SOURCES
 NODE_PLATFORM_DIR       := $(ZOO)/thinnect.node-platform
 
 # ______________ Build components - sources and includes _______________________
 
-SOURCES += tsnd_main.c
-
-# FreeRTOS
-FREERTOS_DIR ?= $(ZOO)/FreeRTOS-Kernel
-FREERTOS_INC = -I$(FREERTOS_DIR)/include \
-               -I$(ZOO)/thinnect.cmsis-freertos/CMSIS_5/CMSIS/RTOS2/Include \
-               -I$(ZOO)/thinnect.cmsis-freertos/CMSIS-FreeRTOS/CMSIS/RTOS2/FreeRTOS/Include \
-               -I$(ZOO)/thinnect.cmsis-freertos/$(MCU_ARCH)
-
-FREERTOS_SRC = $(wildcard $(FREERTOS_DIR)/*.c) \
-               $(ZOO)/thinnect.cmsis-freertos/CMSIS-FreeRTOS/CMSIS/RTOS2/FreeRTOS/Source/cmsis_os2.c
-
-INCLUDES += $(FREERTOS_PORT_INC) $(FREERTOS_INC)
-SOURCES += $(FREERTOS_PORT_SRC) $(FREERTOS_SRC)
-
-# CMSIS_CONFIG_DIR is used to add default CMSIS and FreeRTOS configs to INCLUDES
-CMSIS_CONFIG_DIR ?= $(ZOO)/thinnect.cmsis-freertos/$(MCU_ARCH)/config
-
-# MoteXML components
-MOTEXML_DIR ?= $(ZOO)/prolab.motexml
-DTTYPES_DIR ?= $(ZOO)/prolab.dt-types
-INCLUDES += -I$(MOTEXML_DIR)/lib -I$(DTTYPES_DIR)
-SOURCES += $(MOTEXML_DIR)/lib/MLE.c $(MOTEXML_DIR)/lib/MLD.c $(MOTEXML_DIR)/lib/MLI.c
-CFLAGS += -DLIBEXPORT=""
+SOURCES += main.c
 
 # Silabs EMLIB, RAIL, radio
 INCLUDES += \
     -I$(SILABS_SDKDIR)/hardware/kit/common/drivers \
     -I$(SILABS_SDKDIR)/platform/halconfig/inc/hal-config \
     -I$(SILABS_SDKDIR)/platform/emlib/inc \
-    -I$(SILABS_SDKDIR)/platform/emdrv/sleep/inc \
-    -I$(SILABS_SDKDIR)/platform/radio/rail_lib/hal \
-    -I$(SILABS_SDKDIR)/platform/radio/rail_lib/common \
-    -I$(SILABS_SDKDIR)/platform/radio/rail_lib/protocol/ieee802154 \
-    -I$(SILABS_SDKDIR)/platform/radio/rail_lib/plugin/pa-conversions
 
+# Sources for dependencies and Silabs libraries
 SOURCES += \
-    $(SILABS_SDKDIR)/util/silicon_labs/silabs_core/queue/circular_queue.c \
     $(SILABS_SDKDIR)/hardware/kit/common/drivers/retargetserial.c \
     $(SILABS_SDKDIR)/hardware/kit/common/drivers/retargetio.c \
     $(SILABS_SDKDIR)/platform/emlib/src/em_system.c \
@@ -129,74 +86,27 @@ SOURCES += \
     $(SILABS_SDKDIR)/platform/emlib/src/em_cmu.c \
     $(SILABS_SDKDIR)/platform/emlib/src/em_rmu.c \
     $(SILABS_SDKDIR)/platform/emlib/src/em_gpio.c \
-    $(SILABS_SDKDIR)/platform/emlib/src/em_i2c.c \
-    $(SILABS_SDKDIR)/platform/emlib/src/em_adc.c \
-    $(SILABS_SDKDIR)/platform/emlib/src/em_iadc.c \
-    $(SILABS_SDKDIR)/platform/emlib/src/em_ldma.c \
     $(SILABS_SDKDIR)/platform/emlib/src/em_usart.c \
-    $(SILABS_SDKDIR)/platform/emlib/src/em_msc.c \
-    $(SILABS_SDKDIR)/platform/emlib/src/em_rtcc.c \
-    $(SILABS_SDKDIR)/platform/emlib/src/em_timer.c \
-    $(SILABS_SDKDIR)/platform/emlib/src/em_wdog.c \
-    $(SILABS_SDKDIR)/platform/emdrv/sleep/src/sleep.c \
-    $(SILABS_SDKDIR)/platform/radio/rail_lib/hal/hal_common.c \
-    $(NODE_PLATFORM_DIR)/silabs/radio_rtos.c \
-    $(NODE_PLATFORM_DIR)/common/radio_seqNum.c \
-    $(NODE_PLATFORM_DIR)/common/sys_panic.c
+    $(SILABS_SDKDIR)/platform/emlib/src/em_msc.c
 
-# logging
-CFLAGS  += -DLOGGER_FWRITE
-SOURCES += $(NODE_PLATFORM_DIR)/silabs/logger_fwrite.c
-SOURCES += $(ZOO)/thinnect.lll/logging/loggers_ext.c
+# log.h
 INCLUDES += -I$(ZOO)/thinnect.lll/logging
 
-# device signature
-INCLUDES += -I$(ZOO)/thinnect.device-signature/signature \
-            -I$(ZOO)/thinnect.device-signature/area
-SOURCES  += $(ZOO)/thinnect.device-signature/signature/DeviceSignature.c \
-            $(ZOO)/thinnect.device-signature/area/silabs/SignatureArea.c
+# incbin.h
+INCLUDES += -I$(ZOO)/graphitemaster.incbin
 
-# Generally useful external tools
-INCLUDES += -I$(ZOO)/lammertb.libcrc/include \
-            -I$(ZOO)/jtbr.endianness \
-            -I$(ZOO)/graphitemaster.incbin
-SOURCES += $(ZOO)/lammertb.libcrc/src/crcccitt.c
-
-# mistcomm
-INCLUDES += -I$(ZOO)/thinnect.mist-comm/include -I$(ZOO)/thinnect.mist-comm/include/compat
-SOURCES += $(wildcard $(ZOO)/thinnect.mist-comm/am/*.c) \
-           $(wildcard $(ZOO)/thinnect.mist-comm/api/*.c) \
-           $(wildcard $(ZOO)/thinnect.mist-comm/routing/*.c) \
-           $(wildcard $(ZOO)/thinnect.mist-comm/cmsis/*.c)
-
-# platform stuff - watchdog, io etc...
+# platform.h
 INCLUDES += -I$(NODE_PLATFORM_DIR)/include
 
 # ------------------------------------------------------------------------------
 
 # Pull in the grunt work
 include $(BUILDSYSTEM_DIR)/Makerules
-# ------------------------------------------------------------------------------
-
-# Print some build parameters
-$(info DEFAULT_AM_ADDR=$(DEFAULT_AM_ADDR))
-$(info DEFAULT_RADIO_CHANNEL=$(DEFAULT_RADIO_CHANNEL))
-$(info DEFAULT_PAN_ID=$(DEFAULT_PAN_ID))
-$(info DEFAULT_RFPOWER_DBM=$(DEFAULT_RFPOWER_DBM))
-# ------------------------------------------------------------------------------
 
 $(call passVarToCpp,CFLAGS,VERSION_MAJOR)
 $(call passVarToCpp,CFLAGS,VERSION_MINOR)
 $(call passVarToCpp,CFLAGS,VERSION_PATCH)
 $(call passVarToCpp,CFLAGS,VERSION_STR)
-$(call passVarToCpp,CFLAGS,SW_MAJOR_VERSION)
-$(call passVarToCpp,CFLAGS,SW_MINOR_VERSION)
-$(call passVarToCpp,CFLAGS,SW_PATCH_VERSION)
-$(call passVarToCpp,CFLAGS,IDENT_TIMESTAMP)
-
-$(call passVarToCpp,CFLAGS,DEFAULT_AM_ADDR)
-$(call passVarToCpp,CFLAGS,DEFAULT_RADIO_CHANNEL)
-$(call passVarToCpp,CFLAGS,DEFAULT_PAN_ID)
 
 UUID_APPLICATION_BYTES = $(call uuidToCstr,$(UUID_APPLICATION))
 $(call passVarToCpp,CFLAGS,UUID_APPLICATION_BYTES)
