--- a/apps/blink-silabs/Makefile
+++ b/apps/blink-silabs/Makefile
@@ -94,6 +94,8 @@ SOURCES += $(FREERTOS_PORT_SRC) $(FREERTOS_SRC)
 # CMSIS_CONFIG_DIR is used to add default CMSIS and FreeRTOS configs to INCLUDES
 CMSIS_CONFIG_DIR ?= $(ZOO)/thinnect.cmsis-freertos/$(MCU_ARCH)/config
 
+INCLUDES += -I$(ZOO)/thinnect.cmsis-ext
+
 # Silabs EMLIB, RAIL, radio
 INCLUDES += \
     -I$(SILABS_SDKDIR)/hardware/kit/common/drivers \
@@ -116,6 +118,7 @@ SOURCES += \
 # logging
 CFLAGS  += -DLOGGER_FWRITE
 SOURCES += $(NODE_PLATFORM_DIR)/silabs/logger_fwrite.c
+SOURCES += $(NODE_PLATFORM_DIR)/silabs/logger_fwrite_basic.c
 SOURCES += $(ZOO)/thinnect.lll/logging/loggers_ext.c
 INCLUDES += -I$(ZOO)/thinnect.lll/logging
 
@@ -135,6 +138,8 @@ SOURCES += $(ZOO)/lammertb.libcrc/src/crcccitt.c
 INCLUDES += -I$(NODE_PLATFORM_DIR)/include
 INCLUDES += -I$(NODE_PLATFORM_DIR)/include/silabs
 SOURCES += $(NODE_PLATFORM_DIR)/common/platform_mutex.c
+INCLUDES += -I$(NODE_PLATFORM_DIR)/widgets
+SOURCES += $(NODE_PLATFORM_DIR)/widgets/basic_rtos_logger_setup.c
 
 # ------------------------------------------------------------------------------
 
