Update Gecko SDK, ARM toolchain and docs (#4)
* Update SDK in blink & hello apps, and ARM toolchain + installation instructions.

* update dataflash app sdk & test build for thunderboard 2

* Update i2c-scan app sdk & test build for thunderboard 2

* Update tempsender app sdk & test build for thunderboard 2

* Update radio-count-to-leds app sdk & test all apps again on thunderboard 2 and tsb 2

* Add _RTE_ flag to makefiles, needed by latest CMSIS-FreeRTOS wrapper version

--- a/apps/dataflash-silabs/Makefile
+++ b/apps/dataflash-silabs/Makefile
@@ -18,9 +18,12 @@ CFLAGS                  += -ffunction-sections -fdata-sections -ffreestanding -f
 CFLAGS                  += -DconfigUSE_TICKLESS_IDLE=0
 CFLAGS                  += -D__START=main -D__STARTUP_CLEAR_BSS
 CFLAGS                  += -DVTOR_START_LOCATION=$(APP_START)
-LDFLAGS                 += -nostartfiles -Wl,--gc-sections -Wl,--relax -Wl,-Map=$(@:.elf=.map),--cref -Wl,--wrap=atexit
+LDFLAGS                 += -nostartfiles -Wl,--gc-sections -Wl,--relax -Wl,-Map=$(@:.elf=.map),--cref -Wl,--wrap=atexit -specs=nosys.specs
 LDLIBS                  += -lgcc -lm
 INCLUDES                += -Xassembler -I$(BUILD_DIR) -I.
+
+# The CMSIS RTOS2 wrapper for FreeRTOS now requires this flag to actually import the components 
+CFLAGS                  += -D_RTE_=1
 
 # If set, disables asserts and debugging, enables optimization
 RELEASE_BUILD           ?= 0
@@ -49,7 +52,8 @@ PROGRAM_DEST_ADDR       ?= $(APP_START)
 # distributed with this project and must be installed with Simplicity Studio.
 # The variable needs to point at the subdirectory with the version number, set
 # it in Makefile.private or through the environment.
-SILABS_SDKDIR           ?= $(HOME)/SimplicityStudio_v4/developer/sdks/gecko_sdk_suite/v2.7
+SILABS_SDKDIR           ?= $(HOME)/SimplicityStudio_v5/developer/sdks/gecko_sdk_suite/v3.2
+
 
 # Pull in the developer's private configuration overrides and settings
 -include Makefile.private
